# albedo

./: .env.example  .env.example_miners  .gitignore  .pre-commit-config.yaml  README.md  chain.toml  chain.toml.pre_v2  chain.toml.pre_v3  chain.toml.pre_v4  chain_config.py  docker-compose.yml  ecosystem.config.js  ecosystem.config.js.pre_v2  ecosystem.config.js.pre_v3  ecosystem.eval.config.js  eval-scoring-glm52-chutes-update-plan.md  eval.py  judge.py  llms.txt  miner.py  model_store.py  preeval.py  preeval_judge.py  pyproject.toml  schema.sql  trajectory_sampler.py  validator.py
albedo/: config.py  config.py.pre_v2
albedo/duel/: __init__.py  sampler.py  sampler.py.bak  stream.py  turn.py  turn.py.pre_v2  turn.py.pre_v3
albedo/eval_server/: endpoints.py  endpoints.py.pre_v2  logging_setup.py  notifications.py  probe_logs.py  vllm.py
albedo/judge/: client.py  client.py.pre_v2  client.py.pre_v3  client.py.pre_v4  verdict.py
albedo/models/: download.py  reveal.py  upload.py
albedo/preeval/: fingerprint.py  injection.py  injection.py.pre_v2  injection.py.pre_v3
albedo/storage/: state.py  state.py.pre_dashfix
albedo/validator/: chain.py  challenge.py  challenge.py.pre_dashfix  challenge.py.pre_prune  loop.py  loop.py.bak  loop.py.pre_reset  weights.py.bak  weights.py.pre_dashfix
chain_reader/: __init__.py  chain.py  config.py  db.py  reader.py
chat_to_king/: anon.js  config.py  docker-compose.yml  engine.py  gateway.py  king_source.py  nginx.conf  supervisor.py
chat_to_king/openwebui/: king-chat.js  nginx.conf
docs/: MINING.md  eval-service-status.md  reign-and-weight-pm2.md
hippius_validation/: __main__.py  db.py  validate_worker.py
hippius_validation/hippius/: __init__.py
hippius_validation/opensearch/: fingerprints.py
hippius_validation/validate/: __init__.py  architecture.py
migrations/: 001_eval_service.sql  002_full_system_schema.sql  003_pre_eval_and_ingest_integration.sql
miner/: __init__.py  __main__.py  check_commits.py  cli.py  commit.py  env.py  publish.py  register.py  tui.py  upload.py  validate.py
pm2/: ecosystem.backend-api.config.js  ecosystem.chain-validation.config.js  ecosystem.eval-cache-cleanup.config.js  ecosystem.eval-dispatcher.config.js  ecosystem.eval-reconciler.config.js  ecosystem.eval-requeuer.config.js  ecosystem.eval-sweeper.config.js  ecosystem.gpu-host-tunnel.config.js  ecosystem.judge-api.config.js  ecosystem.king-hf-uploader.config.js  ecosystem.model-gc.config.js  ecosystem.monitor.config.js  ecosystem.registration-history.config.js  ecosystem.remote-eval-api.config.js  ecosystem.sanity-dispatcher.config.js  ecosystem.sanity-host-tunnel.config.js  ecosystem.sanity-reconciler.config.js  ecosystem.sanity-remote-api.config.js  ecosystem.sanity-sweeper.config.js  ecosystem.score-bridge.config.js  ecosystem.set-reign-worker.config.js  ecosystem.weight-setter.config.js
sanity_service/: __main__.py  api.py  checks.py  config.py  db.py  ecosystem.config.js  llm_check.py  runner.py  setup.sh
scripts/: ab_pairwise_replay.py  bench_parallel_judges.py  build_manifest.py  check_commits.py  cleanup_models.sh  create_genesis_king.py  detect_dead_processes.py  donwload_models.py  download_kings_to_check.py  dump_chain_commits.py  eval_cache_cleanup.py  export_training_jsonl.py  generate_arch_spec.py  install_deps.sh  king_hf_uploader.py  openrouter_model_vs_king.py  prefetch_dataset.py  prepare_datasets.py  repair_challenges.py  rescore_generated_samples.py  run_eval.sh  seed_genesis.py  setup_eval_pod.sh  setup_opensearch.sh  sota_anchor_experiment.py  start_eval.sh  start_eval_remote.sh  test_preeval.py  upload_challenger.py  verify_king_repos.py
src/albedo_eval_service/: __init__.py  api.py  artifacts.py  canonical_model_config.py  chutes_glm.py  config.py  dataset_manifest.py  db_migrate.py  dispatcher.py  faults.py  judge_api.py  judge_config.py  judge_core.py  judge_openrouter.py  models.py  notifications.py  remote_api.py  remote_artifacts.py  remote_client.py  remote_config.py  remote_dataset.py  remote_generation.py  remote_models.py  remote_scoring.py  remote_state.py  remote_worker.py  repository.py  requeuer.py  sampling.py  score_bridge.py  score_bridge_client.py  set_reign_worker.py
src/chain_guard/: __init__.py  db.py  scan.py  uploads.py
src/chain_reader/: __main__.py  chain.py  config.py  db.py  reader.py
src/config_validation/: __init__.py  config.py  pipeline.py  publish.py  repo_pattern.py  result.py
src/hippius_validation/: __init__.py  config.py  db.py  validate_worker.py
src/model_validation/: __init__.py  __main__.py  config.py  db.py  validate_worker.py
src/sanity_remote/: __init__.py  api.py  config.py  models.py  state.py  worker.py
src/sanity_service/: __init__.py  checks.py  config.py  dataset.py  db.py  dispatcher.py  ecosystem.config.js  judge_panel.py  llm_check.py  prompts.json  remote_client.py  rubric.py  (+3 more)
swebench_lite_service/: README.md  __init__.py  api.py  config.py  ecosystem.config.js  ecosystem.tunnel.config.js  generate_predictions.py  harness.py  host_s3_uploader.py  kings.py  mini_agent_predictions.py  requirements.txt  s3_publish.py  setup_pod.sh  state.py  tunnel.sh  vllm_server.py  worker.py
tests/: test_artifacts.py  test_build_manifest.py  test_chain_reader.py  test_chat_template_hash.py  test_dataset_manifest.py  test_dispatcher_follow.py  test_dispatcher_request.py  test_download_supervise.py  test_faults.py  test_glm_category_scoring.py  test_judge_api.py  test_judge_core.py  test_judge_openrouter.py  test_king_hf_uploader.py  test_model_backend.py  test_notifications.py  test_remote_api.py  test_remote_dataset.py  test_remote_models.py  test_remote_scoring.py  test_remote_worker.py  test_safetensors_index.py  test_sampling.py  test_sanity_checks.py  test_sanity_gate.py  test_score_bridge.py  test_set_reign_worker.py  test_weight_dtype.py  test_weight_setter.py  test_weights_hash_dedup.py  test_worker_error_classification.py
website/: benchmark.html  detail.html  index.html  kings.html  llms.txt  monitor.py  push_to_hippius.py  registration_history.py
(+88 files in other folders)
