[project]
name = "albedo-eval-service"
version = "0.1.0"
description = "Backend-side eval, validation, and chain-reader services for the Albedo subnet."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "asyncpg>=0.29",
    "bittensor>=10.3,<11",
    "boto3>=1.35.0",
    "datasets",
    "fastapi>=0.115.0",
    "hf_transfer>=0.1",
    "hippius-hub",
    "httpx>=0.27.0",
    "huggingface-hub",
    "loguru>=0.7",
    "numpy",
    "opensearch-py>=2,<3",
    "pandas",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyarrow>=16.0.0",
    "safetensors",
    "torch",
    "transformers",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
# Miner-side SFT/RL training.
train = ["trl", "accelerate", "deepspeed"]
dev = ["ruff"]

[project.scripts]
albedo-eval-api = "albedo_eval_service.api:main"
albedo-eval-dispatcher = "albedo_eval_service.dispatcher:main"
albedo-remote-eval-api = "albedo_eval_service.remote_api:main"
albedo-judge-api = "albedo_eval_service.judge_api:main"
albedo-score-bridge = "albedo_eval_service.score_bridge_client:main"
albedo-db-migrate = "albedo_eval_service.db_migrate:main"
chain-reader = "chain_reader.reader:main"
hippius-validation = "hippius_validation.validate_worker:main"
sanity-service = "sanity_service.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/albedo_eval_service",
    "src/chain_reader",
    "src/hippius_validation",
    "src/sanity_service",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: requires ALBEDO_TEST_DATABASE_URL and a migrated Postgres database",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
