[project]
name = "albedo"
version = "0.1.0"
description = "Albedo subnet: backend eval/validation/chain-reader services + the miner `albedo` CLI."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "asyncpg>=0.29",
    "bittensor>=10.3,<11",
    "boto3>=1.35.0",
    "datasets",
    "fastapi>=0.115.0",
    "hf_transfer>=0.1",
    "hippius-hub",
    "httpx>=0.27.0",
    "huggingface-hub",
    "loguru>=0.7",
    "numpy",
    "opensearch-py>=2,<3",
    "pandas",
    "prompt_toolkit>=3",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyarrow>=16.0.0",
    "safetensors",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "transformers",
    "uvicorn[standard]>=0.30.0",
    "vllm==0.23.0",
]

[project.optional-dependencies]
# Miner-side SFT/RL training.
train = ["trl", "accelerate", "deepspeed"]
dev = ["ruff"]

[project.scripts]
albedo-eval-api = "albedo_eval_service.api:main"
albedo-eval-dispatcher = "albedo_eval_service.dispatcher:main"
albedo-eval-requeuer = "albedo_eval_service.requeuer:main"
set-reign-worker = "set_reign_worker.service:main"
weight-setter = "weight_setter.service:main"
albedo-remote-eval-api = "albedo_eval_service.remote_api:main"
albedo-judge-api = "albedo_eval_service.judge_api:main"
albedo-score-bridge = "albedo_eval_service.score_bridge_client:main"
chain-reader = "chain_reader.reader:main"
hippius-validation = "hippius_validation.validate_worker:main"
sanity-remote = "sanity_remote.api:main"
sanity-dispatcher = "sanity_service.dispatcher:main"
albedo = "miner.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/albedo_eval_service",
    "src/set_reign_worker",
    "src/weight_setter",
    "src/chain_reader",
    "src/chain_guard",
    "src/config_validation",
    "src/hippius_validation",
    "src/sanity_service",
    "src/sanity_remote",
    "miner",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: requires ALBEDO_TEST_DATABASE_URL and a Postgres database initialized from schema.sql",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Judge prompts are long-form prose inside string literals; line length is not meaningful there.
"src/sanity_service/rubric.py" = ["E501"]
# Embedded SQL strings dominate the repository; line length is not meaningful there.
"src/sanity_service/repository.py" = ["E501"]
